--- a/image-gen/apps/backend/package.json
+++ b/image-gen/apps/backend/package.json
@@ -12,7 +12,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@fal-ai/client": "^1.2.3",
     "@types/express": "^5.0.0",
-    "express": "^4.21.2"
+    "@types/jsonwebtoken": "^9.0.9",
+    "common": "*",
+    "db": "*",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
